# Games

./: README.md
battleship/: battleship.py  double_ship.txt
curses_connect/: Board.c  Board.h  CMakeLists.txt  Move.c  Move.h  a.out  logfile.txt  main.c  trackWinCursor.c  trackWinCursor.h  win.c  win.h
minesweeper/: CMakeLists.txt  Makefile  board.c  board.h  inputValidation.c  inputValidation.h  main.c  move.c  move.h  win.c  win.h
